--- a/djl-spring-boot-console-sample/src/main/resources/application.yml
+++ b/djl-spring-boot-console-sample/src/main/resources/application.yml
@@ -9,8 +9,8 @@ djl:
   # Define filters that matches your application's need
   # urls:
   #   - https://alpha-djl-demos.s3.amazonaws.com/model/quickdraw/doodle_mobilenet.zip
-  model-filter:
-    size: 512
+  # model-filter:
+  #  size: 512
    # backbone: mobilenet1.0
   # Override default pre-processing/post-processing behavior
   arguments:
